--- a/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj
+++ b/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj
@@ -150,6 +150,8 @@
     <ClCompile Include="container_Constr.cpp" />
     <ClCompile Include="container_In.cpp" />
     <ClCompile Include="container_Out.cpp" />
+    <ClCompile Include="functional_In.cpp" />
+    <ClCompile Include="functional_Out.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="procedure_In.cpp" />
     <ClCompile Include="procedure_Out.cpp" />
