Добавлена рабочая функция вычисления количества лет .

--- a/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj
+++ b/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="amountOfYears.cpp" />
     <ClCompile Include="container_Constr.cpp" />
     <ClCompile Include="container_In.cpp" />
     <ClCompile Include="container_Out.cpp" />
