--- a/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj.filters
+++ b/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="langtype_In.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="container_OutProcedure.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="container_atd.h">
