--- a/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj.filters
+++ b/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="container_Sort.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="container_OutProcedure.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="container_atd.h">
