--- a/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj
+++ b/ProgrammingMethodsAndTechnics/ProgrammingMethodsAndTechnics.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="container_Constr.cpp" />
     <ClCompile Include="container_In.cpp" />
+    <ClCompile Include="container_Mm.cpp" />
     <ClCompile Include="container_Out.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="procedure_In.cpp" />
